feat: improve command help translation and config management
- Add context length and output length settings
- Optimize config file compatibility
- Improve command check and error handling
- Support custom parameters for different services
- Update documentation and examples
- Fix help translation logic

--- a/config.json.example
+++ b/config.json.example
@@ -5,22 +5,32 @@
       "api_key": "your-openai-api-key-here",
       "url": "https://api.openai.com/v1/chat/completions",
       "model": "gpt-4",
-      "language": "zh-CN"
+      "language": "zh-CN",
+      "max_context_length": 8192,
+      "max_output_length": 4096
     },
     "deepseek": {
       "service": "deepseek",
       "api_key": "your-deepseek-api-key-here",
       "url": "https://api.deepseek.com/v1/chat/completions",
       "model": "deepseek-chat",
-      "language": "zh-CN"
+      "language": "zh-CN",
+      "max_context_length": 32768,
+      "max_output_length": 8192
     },
     "ollama": {
       "service": "ollama",
       "api_key": "not-required",
       "url": "http://localhost:11434/v1/chat/completions",
       "model": "qwen:7b",
-      "language": "zh-CN"
+      "language": "zh-CN",
+      "max_context_length": 65536,
+      "max_output_length": 8192
     }
   },
-  "default_service": "openai"
+  "default_service": "openai",
+  "defaults": {
+    "max_context_length": 4096,
+    "max_output_length": 2048
+  }
 }
