--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,7 @@
 {
   "services": {
     "openai": {
+      "type": "chatgpt",
       "service": "openai",
       "api_key": "your-openai-api-key-here",
       "url": "https://api.openai.com/v1/chat/completions",
@@ -10,6 +11,7 @@
       "max_output_length": 4096
     },
     "deepseek": {
+      "type": "chatgpt",
       "service": "deepseek",
       "api_key": "your-deepseek-api-key-here",
       "url": "https://api.deepseek.com/v1/chat/completions",
@@ -18,7 +20,17 @@
       "max_context_length": 32768,
       "max_output_length": 8192
     },
+    "gemini": {
+      "type": "gemini",
+      "service": "gemini",
+      "api_key": "your-gemini-api-key-here",
+      "model": "gemini-pro",
+      "language": "zh-CN",
+      "max_context_length": 32768,
+      "max_output_length": 8192
+    },
     "ollama": {
+      "type": "chatgpt",
       "service": "ollama",
       "api_key": "not-required",
       "url": "http://localhost:11434/v1/chat/completions",
